--- a/AoC2k16/Advent of Code 2016/Advent of Code 2016.csproj
+++ b/AoC2k16/Advent of Code 2016/Advent of Code 2016.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Day1.cs" />
+    <Compile Include="Day2.cs" />
+    <Compile Include="Day3.cs" />
     <Compile Include="Day4.cs" />
     <Compile Include="Day5.cs" />
     <Compile Include="Day6.cs" />
@@ -54,6 +57,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="inputs\day1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="inputs\day2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="inputs\day4.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
